add collection markdown files.

--- a/content/java/容器类/4. blockingqueue/4.PriorityBlockingQueue.md
+++ b/content/java/容器类/4. blockingqueue/4.PriorityBlockingQueue.md
@@ -1,3 +1,9 @@
+---
+type: docs
+sidebar:
+  open: false
+
+---
 ## PriorityBlockingQueue概述
 
 PriorityBlockingQueue是一个**支持优先级的无界阻塞队列**，基于数组的二叉堆，其实就是线程安全的`PriorityQueue`。
