--- a/content/java/concurrency/14.AQS.md
+++ b/content/java/concurrency/14.AQS.md
@@ -64,7 +64,7 @@ state的访问方式有三种:
 
 我们可以通过修改State字段表示的同步状态来实现多线程的独占模式和共享模式（加锁过程）。
 
-![img](/Users/temperlee/git-repo/knowledge-repo/Blog-center/content/java/concurrency/14.AQS.assets/27605d483e8935da683a93be015713f331378.png)![img](/Users/temperlee/git-repo/knowledge-repo/Blog-center/content/java/concurrency/14.AQS.assets/3f1e1a44f5b7d77000ba4f9476189b2e32806.png)
+![img](14.AQS.assets/27605d483e8935da683a93be015713f331378.png)![img](14.AQS.assets/3f1e1a44f5b7d77000ba4f9476189b2e32806.png)
 
 以`ReentrantLock`为例，`state`初始化为`0`，表示未锁定状态。`A`线程`lock()`时，会调用`tryAcquire()`独占该锁并将`state+1`。此后，其他线程再`tryAcquire()`时就会失败，直到`A`线程`unlock()`到`state=0`(即释放锁)为止，其它线程才有机会获取该锁。当然，释放锁之前，`A`线程自己是可以重复获取此锁的(`state`会累加)，这就是可重入的概念。但要注意，获取多少次就要释放多么次，这样才能保证`state`是能回到零态的。
 
@@ -208,7 +208,7 @@ waitStatus有下面几个枚举值：
 
 ReentrantLock意思为可重入锁，指的是一个线程能够对一个临界资源重复加锁。为了帮助大家更好地理解ReentrantLock的特性，我们先将ReentrantLock跟常用的Synchronized进行比较，其特性如下（蓝色部分为本篇文章主要剖析的点）：
 
-![img](/Users/temperlee/git-repo/knowledge-repo/Blog-center/content/java/concurrency/14.AQS.assets/412d294ff5535bbcddc0d979b2a339e6102264.png)
+![img](14.AQS.assets/412d294ff5535bbcddc0d979b2a339e6102264.png)
 
 通过上文我们已经了解，ReentrantLock支持公平锁和非公平锁，并且ReentrantLock的底层就是由AQS来实现的。那么ReentrantLock是如何通过公平锁和非公平锁与AQS关联起来呢？ 我们着重从这两者的加锁过程来理解一下它们与AQS之间的关系（加锁过程中与AQS的关联比较明显，解锁流程后续会介绍）。
 
@@ -267,7 +267,7 @@ static final class FairSync extends Sync {
 
 首先，我们通过下面的架构图来整体了解一下AQS框架：
 
-![img](/Users/temperlee/git-repo/knowledge-repo/Blog-center/content/java/concurrency/14.AQS.assets/82077ccf14127a87b77cefd1ccf562d3253591.png)
+![img](14.AQS.assets/82077ccf14127a87b77cefd1ccf562d3253591.png)
 
 - 上图中有颜色的为Method，无颜色的为Attribution。
 - 总的来说，AQS框架共分为五层，自上而下由浅入深，从AQS对外暴露的API到底层基础数据。
@@ -281,7 +281,7 @@ static final class FairSync extends Sync {
 
 接下来我们开始开始讲解`AQS`的源码实现。依照`acquire-release`、`acquireShared-releaseShared`的次序来。
 
-![img](/Users/temperlee/git-repo/knowledge-repo/Blog-center/content/java/concurrency/14.AQS.assets/b8b53a70984668bc68653efe9531573e78636.png)
+![img](14.AQS.assets/b8b53a70984668bc68653efe9531573e78636.png)
 
 #### 3.1.1 获取资源 acquire(int)
 
