--- a/content/java/concurrency/16.ReentrantReadWriteLock.md
+++ b/content/java/concurrency/16.ReentrantReadWriteLock.md
@@ -78,7 +78,7 @@ class CachedData {
 
 ReentrantReadWriteLock是ReadWriteLock的实现，其实看到这个名儿：可重入的读写锁，我们就大概可以猜测一下它的意思了。除了实现了`readLock()`和`writeLock()`两个方法之外，还提供了一些重要方法，我们待会会一一解析。
 
-[![img](/Users/temperlee/git-repo/knowledge-repo/Blog-center/content/java/concurrency/16.ReentrantReadWriteLock.assets/1771072-20210115230518749-76355333.png)](https://img2020.cnblogs.com/blog/1771072/202101/1771072-20210115230518749-76355333.png)
+![img](16.ReentrantReadWriteLock.assets/1771072-20210115230518749-76355333.png)
 
 
 
