--- a/content/java/io/1.上下文切换.md
+++ b/content/java/io/1.上下文切换.md
@@ -42,7 +42,7 @@ type: docs
 
 多任务系统往往需要同时执行多道作业。作业数往往大于机器的CPU数，然而一颗CPU同时只能执行一项任务，如何让用户感觉这些任务正在同时进行呢? 操作系统的设计者 **巧妙地利用了时间片轮转的方式, CPU给每个任务都服务一定的时间，然后把当前任务的状态保存下来，在加载下一任务的状态后，继续服务下一任务**。**任务的状态保存及再加载, 这段过程就叫做上下文切换**。时间片轮转的方式使多个任务在同一颗CPU上执行变成了可能。
 
-![img](/Users/temperlee/git-repo/knowledge-repo/Blog-center/content/java/io/上下文切换.assets/webp-20250623153307280)
+![img](上下文切换.assets/webp-20250623153307280)
 
 上下文切换（有时也称做进程切换或任务切换）是指**CPU从一个进程或线程切换到另一个进程或线程。**
 
@@ -74,7 +74,7 @@ type: docs
 4. **将进程B的PCB信息改为“运行态”，并执行进程B**；
 5. **B执行完后，从队列中取出进程A的PCB，恢复进程A被切换时的上下文，继续执行A**；
 
-![img](/Users/temperlee/git-repo/knowledge-repo/Blog-center/content/java/io/上下文切换.assets/webp-20250623153330884)
+![img](上下文切换.assets/webp-20250623153330884)
 
 线程切换和进程切换的步骤也不同。进程的上下文切换分为两步：
 
